--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ button {
 }
 
 #player-name {
+  display: absolute;
+  float: right;
   padding-top: 10px;
   text-align: right;
   color: rgb(255, 255, 255);
@@ -31,8 +33,6 @@ button {
   margin: 0;
   padding: 8px 11px;
   border-right: 0;
-  display: flex;
-  float: right;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -69,7 +69,7 @@ button {
   /* float: right; */
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 99%;
   height: 83%;
   background-image: url('../images/spy-hunter_title_dos.png');
   background-position: center;
@@ -81,7 +81,7 @@ button {
 .game-comms {
   position: absolute;
   bottom: 0;
-  min-width: 100%;
+  min-width: 99%;
   height: 13%;
   border: 5px solid rgb(0, 255, 255); */
   vertical-align: center;
@@ -90,6 +90,7 @@ button {
 
 .game-container {
   position: absolute;
+  /* float: left; */
   width: 82%;
   right: 0;
   top: 0;
