--- a/css/style.css
+++ b/css/style.css
@@ -22,18 +22,45 @@ button {
   /* font-family: 'Open Sans', sans-serif; */
 }
 
-#player-name {
+.high-scores {
   display: absolute;
   float: right;
-  padding-top: 10px;
-  text-align: right;
+  top: 0;
+  right: 0;
   color: rgb(255, 255, 255);
+  border: 5px solid rgb(255, 0, 255);
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 0;
+  margin: 0;
+  padding: 8px 11px;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 18%;
+  height: 98%;
+  text-align: center;
+}
+#player-one {
+  display: relative;
+  padding-top: 10px;
+  border: 5px solid rgb(255, 0, 255);
+  margin: 0;
+  padding: 8px 11px;
+}
+#player-one-score {
+  display: absolute;
+  color: 'yellow';
+}
+#player-two {
+  display: absolute;
+  padding-top: 10px;
   border: 5px solid rgb(255, 0, 255);
   border-top: 0;
   margin: 0;
   padding: 8px 11px;
-  border-right: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+}
+#player-two-score {
+  display: absolute;
+  color: 'yellow';
 }
 
 .game-interact {
@@ -45,6 +72,7 @@ button {
   border: 5px solid rgb(255, 0, 255);
   border-top: 0;
   border-left: 0;
+  border-bottom: 0;
   background-color: rgba(0,0,0,0.6);
   text-align: center;
 }
@@ -81,7 +109,7 @@ button {
 .game-comms {
   position: absolute;
   bottom: 0;
-  min-width: 99%;
+  width: 99%;
   height: 13%;
   border: 5px solid rgb(0, 255, 255); */
   vertical-align: center;
@@ -91,15 +119,16 @@ button {
 .game-container {
   position: absolute;
   /* float: left; */
-  width: 82%;
-  right: 0;
+  width: 64%;
+  left: 175px;
   top: 0;
   height: auto;
 }
 
 #game-canvas {
-  border: 5px solid rgb(255, 255, 255);
+  border: 5px solid rgb(255, 255, 0);
   background-color: rgb(0, 0, 0);
+  left: 0;
 }
 
 /* Free Fancy Buttons Library from Internet*/
