--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 h1 {
   position: relative;
   margin: 5px;
+  margin-top: 0px;
 }
 
 h2, h3, h4 {
@@ -17,7 +18,7 @@ h2, h3, h4 {
 
 button {
   position: relative;
-  width: 60%;
+  width: 65%;
   height: auto;
   /* font-family: 'Open Sans', sans-serif; */
 }
@@ -31,55 +32,37 @@ button {
   border: 5px solid rgb(255, 0, 255);
   border-top: 0;
   border-right: 0;
-  border-bottom: 0;
+  /* border-bottom: 0; */
   margin: 0;
-  padding: 8px 11px;
+  padding: 0 11px;
   background-color: rgba(0, 0, 0, 0.6);
   width: 18%;
-  height: 98%;
-  text-align: center;
-}
-#player-one {
-  display: relative;
-  padding-top: 10px;
-  border: 5px solid rgb(255, 0, 255);
-  margin: 0;
-  padding: 8px 11px;
-}
-#player-one-score {
-  display: absolute;
-  color: 'yellow';
-}
-#player-two {
-  display: absolute;
-  padding-top: 10px;
-  border: 5px solid rgb(255, 0, 255);
-  border-top: 0;
-  margin: 0;
-  padding: 8px 11px;
-}
-#player-two-score {
-  display: absolute;
-  color: 'yellow';
-}
-
-.game-interact {
-  /* float: left; */
-  position: absolute;
-  top: 0;
-  width: 18%;
   height: 100%;
-  border: 5px solid rgb(255, 0, 255);
-  border-top: 0;
-  border-left: 0;
-  border-bottom: 0;
-  background-color: rgba(0,0,0,0.6);
   text-align: center;
 }
-
-.game-interact h1 {
-  margin-top: 0px;
-}
+  #player-one {
+    display: relative;
+    padding-top: 10px;
+    border: 5px solid rgb(255, 0, 255);
+    margin: 0;
+    padding: 8px 11px;
+  }
+    #player-one-score {
+      display: absolute;
+      color: 'yellow';
+    }
+  #player-two {
+    display: absolute;
+    padding-top: 10px;
+    border: 5px solid rgb(255, 0, 255);
+    border-top: 0;
+    margin: 0;
+    padding: 8px 11px;
+  }
+    #player-two-score {
+      display: absolute;
+      color: 'yellow';
+    }
 
 .lives-meter {
   /* color: green; */
@@ -105,6 +88,33 @@ button {
   background-size: cover;
   border: 5px solid rgb(255, 0, 255);
 }
+  .game-interact {
+    /* float: left; */
+    position: absolute;
+    top: 0;
+    width: 18%;
+    height: 100%;
+    border: 5px solid rgb(255, 0, 255);
+    border-top: 0;
+    border-left: 0;
+    border-bottom: 0;
+    background-color: rgba(0,0,0,0.6);
+    text-align: center;
+  }
+
+  .game-container {
+    position: absolute;
+    /* float: left; */
+    width: 64%;
+    left: 175px;
+    top: 0;
+    height: auto;
+  }
+    #game-canvas {
+      border: 5px solid rgb(255, 255, 0);
+      background-color: rgb(0, 0, 0);
+      left: 0;
+    }
 
 .game-comms {
   position: absolute;
@@ -115,21 +125,10 @@ button {
   vertical-align: center;
   padding: 0 0 10px 0;
 }
+  .game-comms h1 {
+    margin-top: 5px;
+  }
 
-.game-container {
-  position: absolute;
-  /* float: left; */
-  width: 64%;
-  left: 175px;
-  top: 0;
-  height: auto;
-}
-
-#game-canvas {
-  border: 5px solid rgb(255, 255, 0);
-  background-color: rgb(0, 0, 0);
-  left: 0;
-}
 
 /* Free Fancy Buttons Library from Internet*/
 .centered {
