--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h2, h3, h4 {
 
 button {
   position: relative;
-  width: 65%;
+  width: 75%;
   height: auto;
   /* font-family: 'Open Sans', sans-serif; */
 }
@@ -104,16 +104,18 @@ button {
 
   .game-container {
     position: absolute;
-    /* float: left; */
     width: 64%;
-    left: 175px;
-    top: 0;
-    height: auto;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
     #game-canvas {
-      border: 5px solid rgb(255, 255, 0);
-      background-color: rgb(0, 0, 0);
-      left: 0;
+      /* border: 5px solid rgb(255, 255, 0); */
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 0;
+      margin: auto;
+      display: block;
     }
 
 .game-comms {
@@ -143,7 +145,7 @@ padding: 0;
 
 .button{
 display: inline-block;
-*display: inline;
+/* display: inline; */
 zoom: 1;
 padding: 4px;
 margin: 2px;
